
2021-09-15  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: allow local cJSON to be used during cross-compile
	  and simplified size checks, based on patches of Helmut Grohne
	  (Debian 993872) and Johan Anderholm (patch #39)

2021-04-07  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for CC when applying aix hack additional to CFLAGS
	* configure.ac: ncurses test: check for ncurses.h, not curses.h

2021-03-07  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: new COBC_CPPFLAGS will be used in cobc generation
	* configure.ac: version 3.2-dev

2020-12-23  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: version 3.1.2

2020-12-15  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: fixed use of MPIR_LIBS

2020-12-08  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: version 3.1.1
	* Makefile.am [EXTRA_DIST]: added README.md and DEPENDENCIES.md

2020-12-07  Simon Sobisch <simonsobisch@gnu.org>

	* m4/ax_ac_define_resolved.m4: fixed resolving datarootdir
	* configure.ac: only try GCC-compatible debug flag if used compiler
	  claims GCC-compatibility

2020-11-21  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac, NEWS: explicit note about obsolete OpenCOBOL-EXTFH
	  and BorlandC

2020-11-12  Simon Sobisch <simonsobisch@gnu.org>

	* m4/ax_ac_define_resolved.m4: fixed resolving passed --prefix

2020-11-11  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: version 3.1

2020-10-28  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: target for distmingwdir

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac, m4/ax_ac_define_resolved.m4, Makefile.am:
	  defaults.h is not created or included any more,
	  all configure provided defines are now found in the single
	  header config.h; new macro ax_ac_define_resolved.m4 resolves
	  variables previously resolved via make, which also limits the amount
	  of variables defined in every Makefile.in
	* configure.ac: move LOCALEDIR definition from config.h to Makefiles;