@@ -1,4 +1,11 @@
 
+2021-10-04  Simon Sobisch <simonsobisch@gnu.org>
+
+	* common.c: always handle SIGFPE, define manually if needed
+	* numeric.c (cob_s32_pow, cob_s64_pow), common.h: new functions for
+	  integer exponentiation, see related #702
+	* intrinsic.c: replace int_pow definition and use with cob_s32_pow
+
 2021-09-30  Simon Sobisch <simonsobisch@gnu.org>
 
 	* common.c: save-guard against broken cob_module chain in dump
